// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-9874.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export type RequestNextDealAction = BaseAction<DealsActionTypes.REQUEST_NEXT_DEAL>;

=====================================output=====================================
export type RequestNextDealAction =
  BaseAction<DealsActionTypes.REQUEST_NEXT_DEAL>;

================================================================================
`;

exports[`pattern-parameter.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type C = {
  foo([]?): void;
  bar({}, []?): any;
  baz(a: string, b: number, []?): void;
};

=====================================output=====================================
type C = {
  foo([]?): void;
  bar({}, []?): any;
  baz(a: string, b: number, []?): void;
};

================================================================================
`;
